--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ click-log==0.3.2
 idna==2.10
 launchdarkly-api==3.5.0
 python-dateutil==2.8.1
+python-dotenv==0.14.0
 requests==2.24.0
 six==1.15.0
 urllib3==1.25.10
